# pangenomesim

./: .clang-format  .gitignore  License  Makefile.am  Readme.md  configure.ac  pangenomesim.1.in
scripts/: _pangenomesim  blast_prototype.zsh  safeguard.zsh  score.py
src/: evo_model.cxx  evo_model.h  gene.cxx  gene.h  global.h  img.cxx  img.h  locus.cxx  locus.h  pangene.cxx  pangene.h  pangenomesim.cxx  pfasta.c  simple.cxx  simple.h  simulate.cxx  simulate.h  util.cxx  util.h
